[UPDATE] : changed the dependencies versions to the latests